[S🛡️] autoload new images to be checked